--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,5 +1,5 @@
 # This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+# For more information see: https://github.com/aian09/en/actions/automating-builds-and-tests/building-and-testing-go
 
 name: Go
 beta134
